Dusan/inter05.output
State 73 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: progelem
    2     | prog progelem

    3 progelem: statement '\n'
    4         | '\n'

    5 statement: LET IDENT '=' ternary
    6          | PRINT ternary
    7          | PRINT STR
    8          | PRINT STR ternary
    9          | READ IDENT
   10          | READ STR IDENT

   11 ternary: ternary '?' ternary ':' ternary
   12        | expr

   13 expr: expr OR expr
   14     | expr AND expr
   15     | expr EQ expr
   16     | expr NE expr
   17     | expr LE expr
   18     | expr GE expr
   19     | expr '<' expr
   20     | expr '>' expr
   21     | expr '+' expr
   22     | expr '-' expr
   23     | expr '*' expr
   24     | expr '/' expr
   25     | expr '^' expr
   26     | '!' expr
   27     | '+' expr
   28     | '-' expr
   29     | '(' ternary ')'
   30     | FLOAT
   31     | IDENT
   32     | SIN '(' ternary ')'
   33     | COS '(' ternary ')'
   34     | TAN '(' ternary ')'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4
'!' (33) 26
'(' (40) 29 32 33 34
')' (41) 29 32 33 34
'*' (42) 23
'+' (43) 21 27
'-' (45) 22 28
'/' (47) 24
':' (58) 11
'<' (60) 19
'=' (61) 5
'>' (62) 20
'?' (63) 11
'^' (94) 25
error (256)
OR (258) 13
AND (259) 14
EQ (260) 15
NE (261) 16
LE (262) 17
GE (263) 18
UNOP (264)
IDENT (265) 5 9 10 31
LET (266) 5
PRINT (267) 6 7 8
SIN (268) 32
COS (269) 33
TAN (270) 34
READ (271) 9 10
FLOAT (272) 30
STR (273) 7 8 10


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
prog (34)
    on left: 1 2, on right: 0 2
progelem (35)
    on left: 3 4, on right: 1 2
statement (36)
    on left: 5 6 7 8 9 10, on right: 3
ternary (37)
    on left: 11 12, on right: 5 6 8 11 29 32 33 34
expr (38)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
    31 32 33 34, on right: 12 13 14 15 16 17 18 19 20 21 22 23 24 25
    26 27 28


State 0

    0 $accept: . prog $end

    LET    shift, and go to state 1
    PRINT  shift, and go to state 2
    READ   shift, and go to state 3
    '\n'   shift, and go to state 4

    prog       go to state 5
    progelem   go to state 6
    statement  go to state 7


State 1

    5 statement: LET . IDENT '=' ternary

    IDENT  shift, and go to state 8


State 2

    6 statement: PRINT . ternary
    7          | PRINT . STR
    8          | PRINT . STR ternary

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    STR    shift, and go to state 17
    '('    shift, and go to state 18

    ternary  go to state 19
    expr     go to state 20


State 3

    9 statement: READ . IDENT
   10          | READ . STR IDENT

    IDENT  shift, and go to state 21
    STR    shift, and go to state 22


State 4

    4 progelem: '\n' .

    $default  reduce using rule 4 (progelem)


State 5

    0 $accept: prog . $end
    2 prog: prog . progelem

    $end   shift, and go to state 23
    LET    shift, and go to state 1
    PRINT  shift, and go to state 2
    READ   shift, and go to state 3
    '\n'   shift, and go to state 4

    progelem   go to state 24
    statement  go to state 7


State 6

    1 prog: progelem .

    $default  reduce using rule 1 (prog)


State 7

    3 progelem: statement . '\n'

    '\n'  shift, and go to state 25


State 8

    5 statement: LET IDENT . '=' ternary

    '='  shift, and go to state 26


State 9

   27 expr: '+' . expr

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    expr  go to state 27


State 10

   28 expr: '-' . expr

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    expr  go to state 28


State 11

   26 expr: '!' . expr

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    expr  go to state 29


State 12

   31 expr: IDENT .

    $default  reduce using rule 31 (expr)


State 13

   32 expr: SIN . '(' ternary ')'

    '('  shift, and go to state 30


State 14

   33 expr: COS . '(' ternary ')'

    '('  shift, and go to state 31


State 15

   34 expr: TAN . '(' ternary ')'

    '('  shift, and go to state 32


State 16

   30 expr: FLOAT .

    $default  reduce using rule 30 (expr)


State 17

    7 statement: PRINT STR .
    8          | PRINT STR . ternary

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    $default  reduce using rule 7 (statement)

    ternary  go to state 33
    expr     go to state 20


State 18

   29 expr: '(' . ternary ')'

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    ternary  go to state 34
    expr     go to state 20


State 19

    6 statement: PRINT ternary .
   11 ternary: ternary . '?' ternary ':' ternary

    '?'  shift, and go to state 35

    $default  reduce using rule 6 (statement)


State 20

   12 ternary: expr .
   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    OR   shift, and go to state 36
    AND  shift, and go to state 37
    EQ   shift, and go to state 38
    NE   shift, and go to state 39
    LE   shift, and go to state 40
    GE   shift, and go to state 41
    '<'  shift, and go to state 42
    '>'  shift, and go to state 43
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    '^'  shift, and go to state 48

    $default  reduce using rule 12 (ternary)


State 21

    9 statement: READ IDENT .

    $default  reduce using rule 9 (statement)


State 22

   10 statement: READ STR . IDENT

    IDENT  shift, and go to state 49


State 23

    0 $accept: prog $end .

    $default  accept


State 24

    2 prog: prog progelem .

    $default  reduce using rule 2 (prog)


State 25

    3 progelem: statement '\n' .

    $default  reduce using rule 3 (progelem)


State 26

    5 statement: LET IDENT '=' . ternary

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    ternary  go to state 50
    expr     go to state 20


State 27

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr
   27     | '+' expr .

    $default  reduce using rule 27 (expr)


State 28

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr
   28     | '-' expr .

    $default  reduce using rule 28 (expr)


State 29

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr
   26     | '!' expr .

    $default  reduce using rule 26 (expr)


State 30

   32 expr: SIN '(' . ternary ')'

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    ternary  go to state 51
    expr     go to state 20


State 31

   33 expr: COS '(' . ternary ')'

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    ternary  go to state 52
    expr     go to state 20


State 32

   34 expr: TAN '(' . ternary ')'

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    ternary  go to state 53
    expr     go to state 20


State 33

    8 statement: PRINT STR ternary .
   11 ternary: ternary . '?' ternary ':' ternary

    '?'  shift, and go to state 35

    $default  reduce using rule 8 (statement)


State 34

   11 ternary: ternary . '?' ternary ':' ternary
   29 expr: '(' ternary . ')'

    '?'  shift, and go to state 35
    ')'  shift, and go to state 54


State 35

   11 ternary: ternary '?' . ternary ':' ternary

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    ternary  go to state 55
    expr     go to state 20


State 36

   13 expr: expr OR . expr

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    expr  go to state 56


State 37

   14 expr: expr AND . expr

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    expr  go to state 57


State 38

   15 expr: expr EQ . expr

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    expr  go to state 58


State 39

   16 expr: expr NE . expr

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    expr  go to state 59


State 40

   17 expr: expr LE . expr

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    expr  go to state 60


State 41

   18 expr: expr GE . expr

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    expr  go to state 61


State 42

   19 expr: expr '<' . expr

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    expr  go to state 62


State 43

   20 expr: expr '>' . expr

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    expr  go to state 63


State 44

   21 expr: expr '+' . expr

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    expr  go to state 64


State 45

   22 expr: expr '-' . expr

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    expr  go to state 65


State 46

   23 expr: expr '*' . expr

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    expr  go to state 66


State 47

   24 expr: expr '/' . expr

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    expr  go to state 67


State 48

   25 expr: expr '^' . expr

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    expr  go to state 68


State 49

   10 statement: READ STR IDENT .

    $default  reduce using rule 10 (statement)


State 50

    5 statement: LET IDENT '=' ternary .
   11 ternary: ternary . '?' ternary ':' ternary

    '?'  shift, and go to state 35

    $default  reduce using rule 5 (statement)


State 51

   11 ternary: ternary . '?' ternary ':' ternary
   32 expr: SIN '(' ternary . ')'

    '?'  shift, and go to state 35
    ')'  shift, and go to state 69


State 52

   11 ternary: ternary . '?' ternary ':' ternary
   33 expr: COS '(' ternary . ')'

    '?'  shift, and go to state 35
    ')'  shift, and go to state 70


State 53

   11 ternary: ternary . '?' ternary ':' ternary
   34 expr: TAN '(' ternary . ')'

    '?'  shift, and go to state 35
    ')'  shift, and go to state 71


State 54

   29 expr: '(' ternary ')' .

    $default  reduce using rule 29 (expr)


State 55

   11 ternary: ternary . '?' ternary ':' ternary
   11        | ternary '?' ternary . ':' ternary

    '?'  shift, and go to state 35
    ':'  shift, and go to state 72


State 56

   13 expr: expr . OR expr
   13     | expr OR expr .
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    AND  shift, and go to state 37
    EQ   shift, and go to state 38
    NE   shift, and go to state 39
    LE   shift, and go to state 40
    GE   shift, and go to state 41
    '<'  shift, and go to state 42
    '>'  shift, and go to state 43
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    '^'  shift, and go to state 48

    $default  reduce using rule 13 (expr)


State 57

   13 expr: expr . OR expr
   14     | expr . AND expr
   14     | expr AND expr .
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    EQ   shift, and go to state 38
    NE   shift, and go to state 39
    LE   shift, and go to state 40
    GE   shift, and go to state 41
    '<'  shift, and go to state 42
    '>'  shift, and go to state 43
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    '^'  shift, and go to state 48

    $default  reduce using rule 14 (expr)


State 58

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   15     | expr EQ expr .
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    LE   shift, and go to state 40
    GE   shift, and go to state 41
    '<'  shift, and go to state 42
    '>'  shift, and go to state 43
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    '^'  shift, and go to state 48

    EQ  error (nonassociative)
    NE  error (nonassociative)

    $default  reduce using rule 15 (expr)


State 59

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   16     | expr NE expr .
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    LE   shift, and go to state 40
    GE   shift, and go to state 41
    '<'  shift, and go to state 42
    '>'  shift, and go to state 43
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    '^'  shift, and go to state 48

    EQ  error (nonassociative)
    NE  error (nonassociative)

    $default  reduce using rule 16 (expr)


State 60

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   17     | expr LE expr .
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    '^'  shift, and go to state 48

    LE   error (nonassociative)
    GE   error (nonassociative)
    '<'  error (nonassociative)
    '>'  error (nonassociative)

    $default  reduce using rule 17 (expr)


State 61

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   18     | expr GE expr .
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    '^'  shift, and go to state 48

    LE   error (nonassociative)
    GE   error (nonassociative)
    '<'  error (nonassociative)
    '>'  error (nonassociative)

    $default  reduce using rule 18 (expr)


State 62

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   19     | expr '<' expr .
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    '^'  shift, and go to state 48

    LE   error (nonassociative)
    GE   error (nonassociative)
    '<'  error (nonassociative)
    '>'  error (nonassociative)

    $default  reduce using rule 19 (expr)


State 63

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   20     | expr '>' expr .
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    '^'  shift, and go to state 48

    LE   error (nonassociative)
    GE   error (nonassociative)
    '<'  error (nonassociative)
    '>'  error (nonassociative)

    $default  reduce using rule 20 (expr)


State 64

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   21     | expr '+' expr .
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    '^'  shift, and go to state 48

    $default  reduce using rule 21 (expr)


State 65

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   22     | expr '-' expr .
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    '^'  shift, and go to state 48

    $default  reduce using rule 22 (expr)


State 66

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   23     | expr '*' expr .
   24     | expr . '/' expr
   25     | expr . '^' expr

    '^'  shift, and go to state 48

    $default  reduce using rule 23 (expr)


State 67

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   24     | expr '/' expr .
   25     | expr . '^' expr

    '^'  shift, and go to state 48

    $default  reduce using rule 24 (expr)


State 68

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr
   25     | expr '^' expr .

    '^'  shift, and go to state 48

    $default  reduce using rule 25 (expr)


State 69

   32 expr: SIN '(' ternary ')' .

    $default  reduce using rule 32 (expr)


State 70

   33 expr: COS '(' ternary ')' .

    $default  reduce using rule 33 (expr)


State 71

   34 expr: TAN '(' ternary ')' .

    $default  reduce using rule 34 (expr)


State 72

   11 ternary: ternary '?' ternary ':' . ternary

    '+'    shift, and go to state 9
    '-'    shift, and go to state 10
    '!'    shift, and go to state 11
    IDENT  shift, and go to state 12
    SIN    shift, and go to state 13
    COS    shift, and go to state 14
    TAN    shift, and go to state 15
    FLOAT  shift, and go to state 16
    '('    shift, and go to state 18

    ternary  go to state 73
    expr     go to state 20


State 73

   11 ternary: ternary . '?' ternary ':' ternary
   11        | ternary '?' ternary ':' ternary .

    '?'  shift, and go to state 35

    '?'       [reduce using rule 11 (ternary)]
    $default  reduce using rule 11 (ternary)
